add scheduleInfo req/res object
