# server/ulmapi/dto/__init__.py
@@ -7,6 +7,7 @@ from ulmapi.dto.access_token import AccessToken
 from ulmapi.dto.cat import Cat
 from ulmapi.dto.course_info import CourseInfo
 from ulmapi.dto.deliverable_info import DeliverableInfo
+from ulmapi.dto.schedule_info import ScheduleInfo
 from ulmapi.dto.signup_info import SignupInfo
 from ulmapi.dto.time_spent_info import TimeSpentInfo
 from ulmapi.dto.user_credentials import UserCredentials
