# server/ulmapi/dto/schedule_info.py
@@ -1,0 +1,150 @@
+# coding: utf-8
+
+from __future__ import absolute_import
+from datetime import date, datetime  # noqa: F401
+
+from typing import List, Dict  # noqa: F401
+
+from ulmapi.dto.base_model_ import Model
+from ulmapi import util
+
+
+class ScheduleInfo(Model):
+    """NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+
+    Do not edit the class manually.
+    """
+
+    def __init__(self, name=None, starts_at=None, ends_at=None, time_allocations=None):  # noqa: E501
+        """ScheduleInfo - a model defined in OpenAPI
+
+        :param name: The name of this ScheduleInfo.  # noqa: E501
+        :type name: str
+        :param starts_at: The starts_at of this ScheduleInfo.  # noqa: E501
+        :type starts_at: date
+        :param ends_at: The ends_at of this ScheduleInfo.  # noqa: E501
+        :type ends_at: date
+        :param time_allocations: The time_allocations of this ScheduleInfo.  # noqa: E501
+        :type time_allocations: Dict[str, float]
+        """
+        self.openapi_types = {
+            'name': str,
+            'starts_at': date,
+            'ends_at': date,
+            'time_allocations': Dict[str, float]
+        }
+
+        self.attribute_map = {
+            'name': 'name',
+            'starts_at': 'starts_at',
+            'ends_at': 'ends_at',
+            'time_allocations': 'time_allocations'
+        }
+
+        self._name = name
+        self._starts_at = starts_at
+        self._ends_at = ends_at
+        self._time_allocations = time_allocations
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'ScheduleInfo':
+        """Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The ScheduleInfo of this ScheduleInfo.  # noqa: E501
+        :rtype: ScheduleInfo
+        """
+        return util.deserialize_model(dikt, cls)
+
+    @property
+    def name(self):
+        """Gets the name of this ScheduleInfo.
+
+
+        :return: The name of this ScheduleInfo.
+        :rtype: str
+        """
+        return self._name
+
+    @name.setter
+    def name(self, name):
+        """Sets the name of this ScheduleInfo.
+
+
+        :param name: The name of this ScheduleInfo.
+        :type name: str
+        """
+        if name is None:
+            raise ValueError("Invalid value for `name`, must not be `None`")  # noqa: E501
+        if name is not None and len(name) < 1:
+            raise ValueError("Invalid value for `name`, length must be greater than or equal to `1`")  # noqa: E501
+
+        self._name = name
+
+    @property
+    def starts_at(self):
+        """Gets the starts_at of this ScheduleInfo.
+
+
+        :return: The starts_at of this ScheduleInfo.
+        :rtype: date
+        """
+        return self._starts_at
+
+    @starts_at.setter
+    def starts_at(self, starts_at):
+        """Sets the starts_at of this ScheduleInfo.
+
+
+        :param starts_at: The starts_at of this ScheduleInfo.
+        :type starts_at: date
+        """
+        if starts_at is None:
+            raise ValueError("Invalid value for `starts_at`, must not be `None`")  # noqa: E501
+
+        self._starts_at = starts_at
+
+    @property
+    def ends_at(self):
+        """Gets the ends_at of this ScheduleInfo.
+
+
+        :return: The ends_at of this ScheduleInfo.
+        :rtype: date
+        """
+        return self._ends_at
+
+    @ends_at.setter
+    def ends_at(self, ends_at):
+        """Sets the ends_at of this ScheduleInfo.
+
+
+        :param ends_at: The ends_at of this ScheduleInfo.
+        :type ends_at: date
+        """
+        if ends_at is None:
+            raise ValueError("Invalid value for `ends_at`, must not be `None`")  # noqa: E501
+
+        self._ends_at = ends_at
+
+    @property
+    def time_allocations(self):
+        """Gets the time_allocations of this ScheduleInfo.
+
+
+        :return: The time_allocations of this ScheduleInfo.
+        :rtype: Dict[str, float]
+        """
+        return self._time_allocations
+
+    @time_allocations.setter
+    def time_allocations(self, time_allocations):
+        """Sets the time_allocations of this ScheduleInfo.
+
+
+        :param time_allocations: The time_allocations of this ScheduleInfo.
+        :type time_allocations: Dict[str, float]
+        """
+
+        self._time_allocations = time_allocations
